--- a/Stylist2 (copy)/application/templates/account.html
+++ b/Stylist2 (copy)/application/templates/account.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block body_content %}
-    <h1>{{ current_user.first_name}} {{ current_user.last_name }} Account Page</h1>
+    <h1 style="font-size:40px; color:lightgrey;text-align:left;font-family:monospace;">{{ current_user.first_name}} {{ current_user.last_name }} Account Page</h1>
+    <br>
+    <br>
     <div class="form">
         <form method="POST" action="">
     	    {{ form.hidden_tag() }}
