--- a/Stylist2 (copy)/application/templates/home.html
+++ b/Stylist2 (copy)/application/templates/home.html
@@ -1,8 +1,16 @@
 {% extends "layout.html" %}
 {% block body_content %}
-    <h1>Stylist</h1>
-    <p>Create your personal shopping list for your holiday destinations</p>
-    
 
+<div style="background:transparent !important" class="jumbotron text-center" style="margin-bottom:0">
+
+<h1 style="font-size:90px; font-family:monospace;color:lightgrey;"> Stylist </h1>
+<p style="font-size:30px; color:lightgrey; font-family:sans-serif;"> Create your own personal shopping list </p>
+ <form action="{{ url_for('register') }}">
+         <input type="submit" value="Get Started">
+ </form>
+
+</div>
 
  {% endblock body_content %}
+
+
