--- a/Stylist2 (copy)/application/templates/layout.html
+++ b/Stylist2 (copy)/application/templates/layout.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>{{ title }} - Page</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <title>{{ title }} Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <style>  .fakeimg {
+    height: 200px;
+    background: #000000;
+  }
+  body { background-color: #383838; }
+  </style>
 </head>
 <body>
-	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand href="{{ url_for('home') }}">Stylist</a>
-			</div>
-			<ul class="nav navbar-nav">
-				{% if current_user.is_authenticated %}
-					<li><a href="{{ url_for('home') }}">Home</a></li>
-					<li><a href="{{ url_for('newitem') }}">Add Item</a></li>
+	<nav class="navbar navbar-expand-sm bg-black navbar-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+        </li>
+			{% if current_user.is_authenticated %}
+				<li class="nav-item"><a class="nav-link"href="{{ url_for('home') }}">Home</a></li>
+				<li class="nav-item"><a class="nav-link"href="{{ url_for('newitem') }}">Add Item</a></li>
 
-					<li><a href="{{ url_for('account') }}">Account</a></li>
+				<li class="nav-item"><a class="nav-link"href="{{ url_for('account') }}">Account</a></li>
 
-					<li><a href="{{ url_for('logout') }}">Logout</a></li>
-					<li><a href="{{ url_for('lists') }}">Lists</a></li>
+				<li class="nav-item"><a class="nav-link"href="{{ url_for('logout') }}">Logout</a></li>
+				<li class="nav-item"><a class="nav-link"href="{{ url_for('lists') }}">Lists</a></li>
 
 				{% else %}
-					<li><a href="{{ url_for('home') }}">Home</a></li>
-					<li><a href="{{ url_for('login') }}">Login</a></li>
-					<li><a href="{{ url_for('register') }}">Register</a></li>
+				 	<li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
 				{% endif %}
 			</ul>
 		</div>
 	</div>
-    {% block body_content %}
+</nav>
+{% block body_content %}
 
-    {% endblock %}
+{% endblock %}
 </body>
 </html>
