--- a/Stylist2 (copy)/application/templates/home.html
+++ b/Stylist2 (copy)/application/templates/home.html
@@ -3,8 +3,8 @@
 
 <div style="background:transparent !important" class="jumbotron text-center" style="margin-bottom:0">
 
-<h1 style="font-size:90px; font-family:monospace;color:lightgrey;"> Stylist </h1>
-<p style="font-size:30px; color:lightgrey; font-family:sans-serif;"> Create your own personal shopping list </p>
+<b><h1 style="font-size:90px; font-family:monospace;color:white;"> Stylist </h1></b>
+<em><p style="font-size:25px; color:white; font-family:sans-serif;"> Create your own personal shopping list </p></em>
  <form action="{{ url_for('register') }}">
          <input type="submit" value="Get Started">
  </form>
