--- a/Stylist2 (copy)/application/templates/register.html
+++ b/Stylist2 (copy)/application/templates/register.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block body_content %}
 <br>
-    <h1 style="font-size:50px; color:lightgrey;text-align:left;font-family:monospace;">Register Page</h1>
+    <h1 style="font-size:50px; color:white;text-align:left;font-family:monospace;">Register Page</h1>
     <br>
-    <p style="font-size:15px; color:lightgrey; font-family:sans-serif;"> Need an account? Sign up</p>
+    <p style="font-size:15px; color:white; font-family:sans-serif;"> Need an account? Sign up</p>
     <div class="form">
         <form method="POST" action="">
     	    {{ form.hidden_tag() }}
