--- a/Stylist2 (copy)/application/templates/newitem.html
+++ b/Stylist2 (copy)/application/templates/newitem.html
@@ -7,12 +7,12 @@
     <title> STYLIST</title>
 </head>
 <body>
-	<h1 style="font-size:60px; font-family:monospace;color:lightgrey;"> Stylist</h1>
-	<br>
-	<br>
-    <h3 style="font-size:20px; font-family:sans-serif;color:lightgrey;">Add new item to shopping list </h3>
+
     <div>
-        <form action="{{ url_for('add') }}" method="POST">
+	<h1 style="font-size:60px; font-family:monospace;color:white;"> Stylist</h1>
+	<br>
+	<br>
+    <h3 style="font-size:20px; font-family:sans-serif;color:white;">Add new item to shopping list </h3><form action="{{ url_for('add') }}" method="POST">
             <input type="text" name="shoppinglistitem">
             <input type="submit" value="Add Item">
         </form>
