--- a/Stylist2 (copy)/application/templates/layout.html
+++ b/Stylist2 (copy)/application/templates/layout.html
@@ -12,11 +12,11 @@
     height: 200px;
     background: #000000;
   }
-  body { background-color: #bababa; }
+  body { background-color: #9e9a95; }
   </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm bg-black navbar-light">
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
