--- a/Stylist2 (copy)/application/templates/deleteaccount.html
+++ b/Stylist2 (copy)/application/templates/deleteaccount.html
@@ -6,11 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
+    <br>
+    <br>
 
     <div class='w3-container w3-margin-left'>
-    <h1 style="font-size:50px; color:white;text-align:left;font-family:monospace;">Register Page</h1>
+    <h1 style="font-size:35px; color:white;text-align:left;font-family:monospace;">{{ current_user.first_name}} {{ current_user.last_name }}'s Account Page</h1>
     <br>
-    <p style="font-size:15px; color:white; font-family:sans-serif;"> Need an account? Sign up</p>
+    
     <div class="form">
         <form method="POST" action="">
     	    {{ form.hidden_tag() }}
@@ -26,33 +28,7 @@
     		    {% else %}
     		        {{ form.email }}
     		    {% endif %}
-    	    </div><br>
-    	    {{ form.password.label }}
-    		    {% if form.password.errors %}
-    		    	{{ form.password }}
-    		        <div class="error">
-    		    	    {% for error in form.password.errors %}
-    		    	        <span>{{ error }}</span>
-    		            {% endfor %}
-    		        </div>
-    		    {% else %}
-    		    	{{ form.password }}
-    		    {% endif %}
-    		</div><br>
-            <div class="form-group">
-    		{{ form.confirm_password.label }}
-    		    {% if form.confirm_password.errors %}
-    		    	{{ form.confirm_password }}
-    		        <div class="error">
-    		    	    {% for error in form.confirm_password.errors %}
-    		    	        <span>{{ error }}</span>
-    		            {% endfor %}
-    		        </div>
-    		    {% else %}
-    		    	{{ form.confirm_password }}
-    		    {% endif %}
-    		</div><br>
-            <div class="form-group">
+                <div class="form-group">
             {{ form.first_name.label }}
             {% if form.first_name.errors %}
                 {{ form.first_name }}
@@ -65,7 +41,6 @@
                 {{ form.first_name }}
              {% endif %}    
         </div>
-        <br>
         <div class="form-group">
             {{ form.last_name.label }}
             {% if form.last_name.errors %}
@@ -79,10 +54,10 @@
                 {{ form.last_name }}
                 {% endif %}
             </div>
-    	    <div class="form-group">
-    		    {{ form.submit }}
-    	    </div>
-        </div>
+            <div class="form-group">
+                {{ form.submit }}
+            </div>
         </form>
     </div>
+
  {% endblock body_content %}
