--- a/Stylist2 (copy)/application/templates/newitem.html
+++ b/Stylist2 (copy)/application/templates/newitem.html
@@ -1,21 +1,23 @@
 {% extends "layout.html" %}
 {% block body_content %}
 <!DOCTYPE html>
-<html lang='en'>
-<head>
-    <meta charset="UTF-8">
-    <title> STYLIST</title>
-</head>
+<html>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
+	<br>
+	<br>
 
-    <div>
-	<h1 style="font-size:60px; font-family:monospace;color:white;"> Stylist</h1>
+    <div class='w3-display-container w3-margin-left'><div class="w3-display-topmiddle">
+	<h1 style="font-size:60px; text-align:center; font-family:monospace;color:white;"> Stylist</h1>
 	<br>
-	<br>
-    <h3 style="font-size:20px; font-family:sans-serif;color:white;">Add new item to shopping list </h3><form action="{{ url_for('add') }}" method="POST">
+	
+    <h3 style="font-size:20px; text-align:center; font-family:sans-serif;color:white;">Add new item to shopping list </h3><form action="{{ url_for('add') }}" method="POST">
             <input type="text" name="shoppinglistitem">
             <input type="submit" value="Add Item">
         </form>
+    </div>
 </div>
 
     
