--- a/Stylist2 (copy)/application/templates/layout.html
+++ b/Stylist2 (copy)/application/templates/layout.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center ">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
